# rank_detector

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
core/: __init__.py  doubao_recognizer.py  legend_recognizer.py
docs/superpowers/plans/: 2026-03-21-legend-recognizer-plan.md  2026-03-22-save-options-enhancement.md
docs/superpowers/specs/: 2025-03-22-save-options-enhancement-design.md  2026-03-21-legend-recognizer-design.md  2026-03-22-save-options-enhancement-design.md
pkg/: download_model.py  generate_training_data.py  organize_data.py  preview_crop.py  test_model.py  train.py
rank_detector_core/: __init__.py  legend_recognizer.py
rank_detector_utils/img/: crop_tool.py
runs/rank_detector/: args.yaml  results.csv
runs/rank_detector2/: args.yaml
runs/rank_detector3/: args.yaml  results.csv
runs/rank_detector4/: args.yaml  results.csv
utils/img/: parallel_test.py
