[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legend-recognizer"
version = "0.2.0"
description = "游戏段位图标识别模块，专注于传奇(Legendary)段位识别，支持多种AI API和灵活的保存选项"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.urls]
Repository = "https://github.com/frigidom1024/rank_detector"

[tool.setuptools.packages.find]
where = ["."]
include = ["rank_detector_core*", "rank_detector_utils*"]
